--- a/public/projects.json
+++ b/public/projects.json
@@ -17,7 +17,9 @@
     "Project Management",
     "Product Management",
     "Samyarth Building Activities",
-    "Ad-hoc tasks"
+    "Ad-hoc tasks",
+    "Oscar",
+    "Tez launcher"
   ],
   "questions": {
     "achievements": "What did you achieve today?",
