created a lambda function that fetch the data from google sheet

--- a/amplify/backend/backend-config.json
+++ b/amplify/backend/backend-config.json
@@ -35,6 +35,11 @@
       "providerPlugin": "awscloudformation",
       "service": "Lambda"
     },
+    "employeeSheetRecords": {
+      "build": true,
+      "providerPlugin": "awscloudformation",
+      "service": "Lambda"
+    },
     "employeesActivityTrackersLogs": {
       "build": true,
       "providerPlugin": "awscloudformation",
@@ -55,6 +60,22 @@
         {
           "category": "function",
           "resourceName": "dailyactivitytracker903c1550"
+        }
+      ]
+    },
+    "AMPLIFY_function_employeeSheetRecords_deploymentBucketName": {
+      "usedBy": [
+        {
+          "category": "function",
+          "resourceName": "employeeSheetRecords"
+        }
+      ]
+    },
+    "AMPLIFY_function_employeeSheetRecords_s3Key": {
+      "usedBy": [
+        {
+          "category": "function",
+          "resourceName": "employeeSheetRecords"
         }
       ]
     },
