--- a/amplify/backend/function/employeeSheetRecords/src/package.json
+++ b/amplify/backend/function/employeeSheetRecords/src/package.json
@@ -11,6 +11,7 @@
     "aws-sdk": "^2.1692.0",
     "dotenv": "^16.4.7",
     "google-auth-library": "^9.15.1",
-    "google-spreadsheet": "^4.1.4"
+    "google-spreadsheet": "^4.1.4",
+    "uuid": "^11.1.0"
   }
 }
