--- a/amplify/backend/backend-config.json
+++ b/amplify/backend/backend-config.json
@@ -16,6 +16,11 @@
     }
   },
   "function": {
+    "applyLeave": {
+      "build": true,
+      "providerPlugin": "awscloudformation",
+      "service": "Lambda"
+    },
     "dailyactivitytracker903c1550": {
       "build": true,
       "dependsOn": [
@@ -49,9 +54,35 @@
       "build": true,
       "providerPlugin": "awscloudformation",
       "service": "Lambda"
+    },
+    "getLeaveRecords": {
+      "build": true,
+      "providerPlugin": "awscloudformation",
+      "service": "Lambda"
+    },
+    "slackNotification": {
+      "build": true,
+      "providerPlugin": "awscloudformation",
+      "service": "Lambda"
     }
   },
   "parameters": {
+    "AMPLIFY_function_applyLeave_deploymentBucketName": {
+      "usedBy": [
+        {
+          "category": "function",
+          "resourceName": "applyLeave"
+        }
+      ]
+    },
+    "AMPLIFY_function_applyLeave_s3Key": {
+      "usedBy": [
+        {
+          "category": "function",
+          "resourceName": "applyLeave"
+        }
+      ]
+    },
     "AMPLIFY_function_dailyactivitytracker903c1550_deploymentBucketName": {
       "usedBy": [
         {
@@ -113,6 +144,38 @@
         {
           "category": "function",
           "resourceName": "employeesActivityTrackersLogs"
+        }
+      ]
+    },
+    "AMPLIFY_function_getLeaveRecords_deploymentBucketName": {
+      "usedBy": [
+        {
+          "category": "function",
+          "resourceName": "getLeaveRecords"
+        }
+      ]
+    },
+    "AMPLIFY_function_getLeaveRecords_s3Key": {
+      "usedBy": [
+        {
+          "category": "function",
+          "resourceName": "getLeaveRecords"
+        }
+      ]
+    },
+    "AMPLIFY_function_slackNotification_deploymentBucketName": {
+      "usedBy": [
+        {
+          "category": "function",
+          "resourceName": "slackNotification"
+        }
+      ]
+    },
+    "AMPLIFY_function_slackNotification_s3Key": {
+      "usedBy": [
+        {
+          "category": "function",
+          "resourceName": "slackNotification"
         }
       ]
     }
