--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "dotenv": "^16.4.5",
     "express": "^4.21.2",
     "google-spreadsheet": "^4.1.4",
+    "http-proxy-middleware": "^3.0.3",
     "jwt-decode": "^4.0.0",
     "nodemon": "^3.1.9",
     "react": "^18.3.1",
