--- a/package.json
+++ b/package.json
@@ -12,10 +12,10 @@
   "dependencies": {
     "@aws-sdk/client-dynamodb": "^3.774.0",
     "@aws-sdk/lib-dynamodb": "^3.774.0",
-    "@emotion/react": "^11.11.4",
-    "@emotion/styled": "^11.11.5",
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
     "@mui/icons-material": "^5.16.0",
-    "@mui/material": "^5.16.0",
+    "@mui/material": "^5.17.1",
     "aws-sdk": "^2.1692.0",
     "aws-serverless-express": "^3.4.0",
     "body-parser": "^1.20.3",
@@ -24,6 +24,7 @@
     "google-spreadsheet": "^4.1.4",
     "http-proxy-middleware": "^3.0.3",
     "jwt-decode": "^4.0.0",
+    "lodash": "^4.17.21",
     "nodemon": "^3.1.9",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
