--- a/package.json
+++ b/package.json
@@ -14,11 +14,14 @@
     "@aws-sdk/lib-dynamodb": "^3.774.0",
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
-    "@mui/icons-material": "^5.16.0",
+    "@mui/icons-material": "^5.17.1",
     "@mui/material": "^5.17.1",
+    "@mui/x-date-pickers": "^8.4.0",
     "aws-sdk": "^2.1692.0",
     "aws-serverless-express": "^3.4.0",
     "body-parser": "^1.20.3",
+    "date-fns": "^4.1.0",
+    "dayjs": "^1.11.13",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "google-spreadsheet": "^4.1.4",
