--- a/amplify/backend/function/slackNotification/src/package.json
+++ b/amplify/backend/function/slackNotification/src/package.json
@@ -8,8 +8,10 @@
     "@types/aws-lambda": "^8.10.92"
   },
   "dependencies": {
+    "@aws-sdk/client-dynamodb": "^3.817.0",
+    "@aws-sdk/lib-dynamodb": "^3.817.0",
     "aws-sdk": "^2.1692.0",
-    "axios": "^1.8.4",
+    "axios": "^1.9.0",
     "dotenv": "^16.4.7"
   }
 }
