created script to dump into projectMaster and some other functions as well

--- a/amplify/backend/function/employeeSheetRecords/src/package.json
+++ b/amplify/backend/function/employeeSheetRecords/src/package.json
@@ -12,6 +12,8 @@
     "dotenv": "^16.4.7",
     "google-auth-library": "^9.15.1",
     "google-spreadsheet": "^4.1.4",
+    "googleapis": "^150.0.1",
+    "uui": "^1.0.7",
     "uuid": "^11.1.0"
   }
 }
